src/snapshots/yaks__tui__tests__inline_search_field_and_recolor.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 2 · Shaving 1 · Shorn 1
▾ [H] p2 Root A                 │ id       a0
    [H] p3 Child A1             │ title    Root A
    [N] p3 Child A2 done        │ type     task
                                │ priority 2
                                │
                                │
                                │
                                │
                                │
                                │
                                │
                                │
/child
