src/snapshots/yaks__tui__tests__label_editor_field.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 1 · Shaving 0 · Shorn 0 · Recent 1 · Starred 0
  [H] p3 Editable               │ id       e0
                                │ title    Editable
                                │ type     task
                                │ priority p3
                                │ labels   rust, tui
                                │
                                │ First line.
                                │ Second line.
                                │
                                │
                                │
                                │
Labels for e0: rust, tui
