src/snapshots/yaks__tui__tests__priority_picker_overlay.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 2 · Shaving 1 · Shorn 1 · Recent 4 · Starred 0
▾ [H] p2 Root A                 │ id       a0
    [H] p3 Child A1             │ title    Root A
    [N] p3 Child A2 done        │ type     task
                                │ priority p2
                                │ children
                                │   H a1  Child A1
                                │   N a2  Child A2 done
                                │
                                │
                                │
                                │
                                │
Priority for a0: 1=urgent 2=high 3=med 4=low 5=lowest  (Esc=cancel)
