src/snapshots/yaks__tui__tests__slaughter_confirm_overlay.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

 a0   p2 task     🦬  Root A
   a1 p3 task     🦬  Child A1
   a2 p3 task     🐑  Child A2 done








Slaughter a1 (Child A1)? (y/N):
