src/snapshots/yaks__tui__tests__state_picker_overlay.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

 a0   p2 task     🦬  Root A
   a1 p3 task     🦬  Child A1
   a2 p3 task     🐑  Child A2 done








State for a0: h=hairy s=shaving n=shorn x=slaughter  (Esc=cancel)
