src/snapshots/yaks__tui__tests__status_notification_below_tabs_narrow.snap
---
source: src/tui.rs
expression: narrow
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starred (0)
saved view: quarterly-planning
 a0   p2 task     🦬  Root A
   a1 p3 task     🦬  Child A1



Tab:view  j/k:move  l:detail  h:herd  v:views  c/C:new  E:edit  X:del  S:state  D:dep  f:f
