src/snapshots/yaks__tui__tests__tree_with_ghost_family.snap
---
source: src/tui.rs
expression: "draw(&sample(), 72, 14)"
---
 Hairy 2 · Shaving 1 · Shorn 1
▾ [H] p2 Root A                 │ id       a0
    [H] p3 Child A1             │ title    Root A
    [N] p3 Child A2 done        │ type     task
                                │ priority p2
                                │ children
                                │   H a1  Child A1
                                │   N a2  Child A2 done
                                │
                                │
                                │
                                │
                                │
j/k move · c new · E edit · S/P/T/L/X · D/R link · / find · Tab tab · q
