src/snapshots/yaks__tui__tests__type_picker_overlay.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 2 · Shaving 1 · Shorn 1
▾ [H] p2 Root A                 │ id       a0
    [H] p3 Child A1             │ title    Root A
    [N] p3 Child A2 done        │ type     task
                                │ priority p2
                                │ children
                                │   H a1  Child A1
                                │   N a2  Child A2 done
                                │
                                │
                                │
                                │
                                │
Type for a0: t=task b=bug f=feature i=idea  (Esc=cancel)
