src/snapshots/yaks__tui__tests__view_picker_overlay.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 16)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

 a0   p2 task     🦬  Ro │ Views
   a1 p3 task     🦬  Ch │ ▸ 📌  🦬  Hairy  (2)  🔒
                        │   📌  🪒  Shaving  (1)  🔒
                        │   📌  🐑  Shorn  (1)  🔒
                        │   📌  🕒  Recent  (4)  🔒
                        │   📌  ⭐  Starred  (0)  🔒
                        │
                        │
                        │
                        │
                        │
                        │
                        │
Enter open · p pin · J/K move · r rename · d delete · Esc close
